# AIbot

./: .env.test  .flake8  .gitignore  ATTRIBUTION.md  CHANGES.md  COMMERCIAL_README.md  DELIVERABLES.md  Dockerfile  EULA.txt  GITHUB_MODELS_INTEGRATION.md  GITHUB_MODELS_README.md  LICENSE  MIGRATION_COMPLETE.md  PRIVACY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  README_DOCUMENTATION_INDEX.md  START_HERE.md  __init__.py  api.py  app.py  app_new.py  auth.py  create_github_repo.ps1  create_github_repo.sh  mail.py  migrate.sh  model_client.py  model_client_real.py  prompts.py  prompts_full.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  users.py  validate_code.py
.github/workflows/: ci.yml
static/: styles.css
templates/: admin.html  index.html  join.html  login.html  reset_password.html  reset_request.html
tests/: test_api.py  test_app.py
