[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paralegal-agent"
version = "0.1.0"
description = "Paralegal AI Assistant web app (Flask) - scaffold using GitHub-hosted models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask>=2.0",
    "python-dotenv>=0.21",
    "requests>=2.28",
    "Flask-WTF>=1.1",
    "Flask-Mail>=0.9",
]
